Correct spacing of cdon table

--- a/BIOL_112/css/styles.css
+++ b/BIOL_112/css/styles.css
@@ -65,7 +65,7 @@ header a:hover{
 }
 
 .content{
-  padding: 2% 5%;
+  padding: 2% 2% 2% 5%;
 }
 
 body {
@@ -76,7 +76,7 @@ body {
 
 div {
   word-wrap: normal;
-  max-width: 650px;
+  max-width: 630px;
 }
 
 b {
@@ -134,7 +134,7 @@ img {
     height: auto;
 }
 
-@media only screen and (max-width: 1290px) {
+@media only screen and (max-width: 1310px) {
   #gen_codons {
       display: none;
   }
